@@ -73,6 +73,8 @@ $_lang['articles.import_blogger_file_desc'] = 'Select the Blogger XML file that 
 $_lang['articles.import_blogger_file_err_nf'] = 'Please specify the Blogger Export XML File.';
 $_lang['articles.import_blogger_file_server'] = 'Blogger Export XML File on Server';
 $_lang['articles.import_blogger_file_server_desc'] = 'Or, alternatively, specify an absolute path to the Blogger XML file that you get when you export from Blogger that is located on your server. You may use {core_path}, {base_path} and {assets_path} as placeholders.';
+$_lang['articles.import_modx_change_template'] = 'Change Template to Container\'s';
+$_lang['articles.import_modx_change_template_desc'] = 'If checked, will change the Template of the new Article to this Article Container\'s Template. Recommended to leave checked.';
 $_lang['articles.import_modx_commentsThreadNameFormat'] = 'Quip Thread Name Format';
 $_lang['articles.import_modx_commentsThreadNameFormat_desc'] = 'The name format (such as "blog-post-[[*id]]") that you set for the thread property for Quip. Use [[*id]] to replace with the imported Resource\'s ID. Leave blank to not import comments.';
 $_lang['articles.import_modx_err_no_criteria'] = 'Please specify at least one limiting factor in the import criteria.';
